syntax = "proto3";

option java_multiple_files = true;
option java_package = "io.grpc.examples.protobuf";
option java_outer_classname = "ProtobufProto";


package protobuf;

// The AccServer service definition.
service AccServer {
    // 查询用户是否在线
    rpc QueryUsersOnline (QueryUsersOnlineReq) returns (QueryUsersOnlineRsp) {
    }
    // 发送消息
    rpc SendMsg (SendMsgReq) returns (SendMsgRsp) {
    }
    // 获取用户列表
    rpc GetUserList (GetUserListReq) returns (GetUserListRsp) {
    }
}

// 查询用户是否在线
message QueryUsersOnlineReq {
    string sysAccount = 1; // AppPlatform
    string appPlatform = 2; // AppPlatform
    string userId = 3; // 用户ID
}

message QueryUsersOnlineRsp {
    uint32 retCode = 1;
    string errMsg = 2;
    bool online = 3;
}

// 发送消息
message SendMsgReq {
    string sysAccount = 1; // 用户ID
    string appPlatform = 2; // 用户ID
    repeated string userIds = 3;
    bytes acc = 4; // 用户ID
}

message SendMsgRsp {
    uint32 retCode = 1;
    string errMsg = 2;
    string sendMsgId = 3;
}

//// 发送消息
//message SendMsgAllReq {
//    string sysAccount = 1; // 用户ID
//    string appPlatform = 2; // 用户ID
//    string acc = 3; // msg
//}
//
//message SendMsgAllRsp {
//    uint32 retCode = 1;
//    string errMsg = 2;
//    string sendMsgId = 3;
//}

// 获取用户列表
message GetUserListReq {
}

message GetUserListRsp {
    uint32 retCode = 1;
    string errMsg = 2;
    repeated string userIds = 3;
}